// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdaptableGrid /> by default matches with snapshot 1`] = `
<div
  className="adaptable-grid__StyledGrid-txsbu0-0 kscnci"
>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 fmGblY"
  >
    Test
  </div>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 gZQldn"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with some props matches with snapshot 1`] = `
<div
  className="adaptable-grid__StyledGrid-txsbu0-0 cSerqo"
>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 kKqTcF"
    offset={3}
  >
    Test
  </div>
  <div
    className="adaptable-grid__StyledGridCol-txsbu0-1 gxolfR"
  >
    Test
  </div>
</div>
`;
